# Human_Collaboration_Manipulation_System

./: LICENSE  README.md
demo_system/discharge_position_detect/: CMakeLists.txt  package.xml
demo_system/human_collaboration/: CMakeLists.txt  package.xml
demo_system/peripheral_environment_detection/: CMakeLists.txt  package.xml
demo_system/peripheral_environment_detection_module/: CMakeLists.txt  package.xml
demo_system/system_management/: CMakeLists.txt  package.xml
demo_system/system_management/msg/: TaskResult.msg
demo_system/work_detection/: CMakeLists.txt  package.xml
demo_system/work_detection/msg/: WorkDetectionResultList.msg
demo_system/work_detection_module/: package.xml
demo_system/ws_recogneze/: CMakeLists.txt  package.xml
demo_system/ws_recogneze_module/: CMakeLists.txt  package.xml
discharge_position_detect_module/: CMakeLists.txt  package.xml
human_collaboration_module/: CMakeLists.txt  package.xml
msg_folder/: CMakeLists.txt  package.xml
msg_folder/msg/: AreaDivision.msg  PerEnvDetectResult.msg  TaskCommand.msg  TaskCommandList.msg  WorkDetectionResult.msg
msg_folder/srv/: MonitoringAreaSetup.srv
peripheral_environment_detection_module/msg/: AreaSetup.msg
peripheral_environment_detection_module/scripts/: PerEnvDetectNode.py  test_client.py
system_management_module/: CMakeLists.txt  package.xml
system_management_module/scripts/: Suito_SystemManagementNode.py
work_detection_module/: CMakeLists.txt
work_detection_module/config/: sandwich_id.yaml
work_detection_module/scripts/: WorkDetectionNode.py  test_client.py
(+15 files in other folders)
